[gd_scene format=3 uid="uid://cq8api2vch67t"]

[ext_resource type="Script" uid="uid://mj3mm2a6m4ft" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="FontFile" uid="uid://d20j4lrf88dsi" path="res://fonts/Cute Dino.ttf" id="2_0xm2m"]
[ext_resource type="Shader" uid="uid://dkc1y75axo6op" path="res://main.gdshader" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://ck387vuo3awsi" path="res://images/tile_for_scrolling_background.png" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://do0h37hr4gm0r" path="res://ui/options_menu.tscn" id="5_lquwl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1bvp3"]
shader = ExtResource("2_h2yge")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_7dm0k"]
color = Color(0, 0, 0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_ig7tw"]
font = ExtResource("2_0xm2m")
font_size = 200

[node name="Main" type="Control" unique_id=1794076326 node_paths=PackedStringArray("main_menu", "options_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")
main_menu = NodePath("MarginContainer/VBoxContainer/MainMenu")
options_menu = NodePath("MarginContainer/VBoxContainer/OptionsMenu")

[node name="Background" type="ColorRect" parent="." unique_id=1379126341]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.37473494, 0.56839573, 0.8914158, 1)

[node name="ScrollingBackground" type="TextureRect" parent="." unique_id=343243089]
modulate = Color(0.6627451, 1, 1, 1)
texture_repeat = 2
material = SubResource("ShaderMaterial_1bvp3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1bvp3")
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=82809156]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1044819189]
layout_mode = 2

[node name="HSeparator01" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=247028109]
layout_mode = 2
theme_override_constants/separation = 80
theme_override_styles/separator = SubResource("StyleBoxLine_7dm0k")

[node name="GameTitle" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1076455968]
layout_mode = 2
text = "Music for Fish"
label_settings = SubResource("LabelSettings_ig7tw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator02" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=627804025]
layout_mode = 2
theme_override_constants/separation = 80
theme_override_styles/separator = SubResource("StyleBoxLine_7dm0k")

[node name="MainMenu" type="MarginContainer" parent="MarginContainer/VBoxContainer" unique_id=1807765698]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 600
theme_override_constants/margin_right = 600

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainMenu" unique_id=478287239]
layout_mode = 2
theme_override_constants/separation = 50

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/MainMenu/VBoxContainer" unique_id=907371761]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 50
text = "PLAY"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/MainMenu/VBoxContainer" unique_id=73959520]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 50
text = "OPTIONS"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/MainMenu/VBoxContainer" unique_id=1618889992]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 50
text = "EXIT"

[node name="OptionsMenu" parent="MarginContainer/VBoxContainer" unique_id=1475999769 instance=ExtResource("5_lquwl")]
visible = false
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="back_requested" from="MarginContainer/VBoxContainer/OptionsMenu" to="." method="_on_options_menu_back_requested"]
